View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0032874 | Community | OCCT:Modeling Data | public | 2022-03-15 12:10 | 2022-04-12 09:39 |
Reporter | Jerome Monaco | Assigned To | azv | ||
Priority | normal | Severity | block | ||
Status | verified | Resolution | fixed | ||
Platform | Windows | OS | Windows 10 | ||
Product Version | 7.6.0 | ||||
Target Version | 7.6.2 | ||||
Summary | 0032874: IsParallel() method of Extrema_ExtCC does not give same results in OCC 7.6.0 vs OCC 7.5.0 | ||||
Description | Hello, I am just moving to OCC 7.6.0 (from 7.5.0) and during tests I found wrong results in Extrema_ExtCC. I am trying to calculate the distance between 2 concentric arc of circle and depending on the length of the arcs the solution is not always found. In fact the IsParallel() method does not return always true as it did in 7.5.0. To better understand please have a look to the attached image and code. Here are below some arc lengths values I tested: OCC 7.5.0 Angle=30.00 Distance FOUND=10.0 Angle=36.00 Distance FOUND=10.0 Angle=45.00 Distance FOUND=10.0 Angle=57.30 Distance FOUND=10.0 Angle=60.00 Distance FOUND=10.0 Angle=150.00 Distance FOUND=10.0 Angle=90.00 Distance FOUND=10.0 Angle=240.00 Distance FOUND=10.0 Angle=270.00 Distance FOUND=10.0 OCC 7.6.0 Angle=30.00 Distance NOT FOUND Angle=36.00 Distance FOUND=10.0 Angle=45.00 Distance FOUND=10.0 Angle=57.30 Distance NOT FOUND Angle=60.00 Distance FOUND=10.0 Angle=150.00 Distance NOT FOUND Angle=90.00 Distance FOUND=10.0 Angle=240.00 Distance FOUND=10.0 Angle=270.00 Distance FOUND=10.0 Best regards. Jerome Monaco | ||||
Steps To Reproduce | Just build the attached cpp code and run it on 7.5.0 and on 7.6.0. | ||||
Tags | No tags attached. | ||||
Test case number | bugs/modalg_7/bug32874 | ||||
|
Extrema_CircleCircle.png (13,018 bytes) Extrema_ExtCC_7.6.0.cpp (2,339 bytes) |
|
Branch CR32874 has been created by azv. SHA-1: 027de87bbc0a1531a75c73be3a6fd83fc4d782c1 Detailed log of new commits: Author: azv Date: Fri Mar 18 23:46:44 2022 +0300 0032874: IsParallel() method of Extrema_ExtCC does not give same results in OCC 7.6.0 vs OCC 7.5.0 Improve tolerance criteria to check values of extremas for equality: use multiplier, which depends on the value, instead of magic number |
|
Dear Igor, The problem was regression after 0026269. Please, review the following changes: OCCT: CR32874 Products: NOT Test results: http://jenkins-test-occt/view/CR32874-master-AZV/view/COMPARE/ |
|
Branch CR32874 seems to be valid |
|
Combination - OCCT branch : IR-2022-03-25 master SHA - e4753a7d1658331a79025964d1c55f2a6d999c6c 49e51745631c52b6c452c65adae4d6dfa21a1b1e Products branch : IR-2022-03-25 SHA - 303106116fcb5c01a598ea01cc5174a45aae8f18 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 18507.51000000038 / 18488.570000000385 [+0.10%] Products Total CPU difference: 11703.320000000122 / 11709.530000000132 [-0.05%] Windows-64-VC14: OCCT Total CPU difference: 20451.96875 / 20413.53125 [+0.19%] Products Total CPU difference: 13191.96875 / 13181.65625 [+0.08%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR32874 has been deleted by mnt. SHA-1: 027de87bbc0a1531a75c73be3a6fd83fc4d782c1 |
|
Hi gentlemen, I patched my 7.6.0 with the code change you did and it solved some cases but I am afraid to have discovered some more cases that do not work.... I cannot add new files to this issue now it is closed so do I have to create a new issue ? Best regards. Jerome. |
|
Hi Jerome, Could you try to attach files once again? This issue becomes reopened, thus it is possible to add files now. Best regards, Artem |
|
Hi gentlemen, I patched my 7.6.0 with the code change you did and it solved some cases but I am afraid to have discovered some more cases that do not work.... Please find attached a C++ example to reproduce the problem and 2 output files one with OCC 7.5.0 that gives always good solutions and one with the OCC 7.6.0 that fails in some cases. Sorry to not have seen that before first correction. Thanks. Best regards. Jerome. RESULTS-Extrema_ExtCC-7.5.0.txt (3,220 bytes) RESULTS-Extrema_ExtCC-7.6.0.txt (3,110 bytes) Test1-Extrema_ExtCC_7.6.0.cpp (3,474 bytes) |
|
Branch CR32874 has been created by azv. SHA-1: aee81efd90792bf818df7d7bfca83640b316c474 Detailed log of new commits: Author: azv Date: Thu Apr 7 14:28:03 2022 +0300 0032874: IsParallel() method of Extrema_ExtCC does not give same results in OCC 7.6.0 vs OCC 7.5.0 Use precision depending on radii of participating circles. |
|
Dear Igor, Please, review branch CR32874. Test results: http://jenkins-test-occt/view/CR32874-master-AZV/view/COMPARE/ |
|
Branch CR32874 seems to be valid |
|
Combination - OCCT branch : IR-2022-04-08 master SHA - 7021de2fe7a69d4c788ccf43b8b096dbcc8597c8 49e51745631c52b6c452c65adae4d6dfa21a1b1e Products branch : IR-2022-04-08 SHA - e16d959d441765c483049307ba7293173532103a was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 18452.87000000039 / 18490.94000000032 [-0.21%] Products Total CPU difference: 11761.310000000152 / 11719.920000000124 [+0.35%] Windows-64-VC14: OCCT Total CPU difference: 20539.828125 / 20552.71875 [-0.06%] Products Total CPU difference: 13248.21875 / 13242.609375 [+0.04%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR32874 has been deleted by mnt. SHA-1: aee81efd90792bf818df7d7bfca83640b316c474 |
|
Hello gentlemen, I updated with the patch you made and everything works well. Thanks a lot for this quick correction. Best regards. Jerome. |
occt: master 9b337ad8 2022-03-18 23:46:44 Committer: smoskvin Details Diff |
0032874: IsParallel() method of Extrema_ExtCC does not give same results in OCC 7.6.0 vs OCC 7.5.0 Improve tolerance criteria to check values of extremas for equality: use multiplier, which depends on the value, instead of magic number |
Affected Issues 0032874 |
|
mod - src/Extrema/Extrema_ExtCC.cxx | Diff File | ||
add - tests/bugs/modalg_7/bug32874 | Diff File | ||
occt: master ee6581ad 2022-04-07 14:28:03 Committer: smoskvin Details Diff |
0032874: IsParallel() method of Extrema_ExtCC does not give same results in OCC 7.6.0 vs OCC 7.5.0 Use precision depending on radii of participating circles. |
Affected Issues 0032874 |
|
mod - src/Extrema/Extrema_ExtCC.cxx | Diff File | ||
rm - tests/bugs/modalg_7/bug32874 | Diff File | ||
add - tests/bugs/modalg_7/bug32874_1 | Diff File | ||
add - tests/bugs/modalg_7/bug32874_2 | Diff File | ||
add - tests/bugs/modalg_7/bug32874_3 | Diff File | ||
add - tests/bugs/modalg_7/bug32874_4 | Diff File | ||
add - tests/bugs/modalg_7/bug32874_5 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2022-03-15 12:10 | Jerome Monaco | New Issue | |
2022-03-15 12:10 | Jerome Monaco | Assigned To | => msv |
2022-03-15 12:10 | Jerome Monaco | File Added: Extrema_CircleCircle.png | |
2022-03-15 12:10 | Jerome Monaco | File Added: Extrema_ExtCC_7.6.0.cpp | |
2022-03-15 12:23 | msv | Assigned To | msv => azv |
2022-03-18 23:47 | git | Note Added: 0107356 | |
2022-03-18 23:49 | azv | Status | new => assigned |
2022-03-19 17:18 | azv | Assigned To | azv => ifv |
2022-03-19 17:18 | azv | Status | assigned => resolved |
2022-03-19 17:18 | azv | Note Added: 0107368 | |
2022-03-19 17:18 | azv | Relationship added | child of 0026269 |
2022-03-19 18:21 | kgv | Target Version | => 7.7.0 |
2022-03-21 11:49 | ifv | Assigned To | ifv => bugmaster |
2022-03-21 11:49 | ifv | Status | resolved => reviewed |
2022-03-21 11:49 | ifv | Note Added: 0107373 | |
2022-03-24 09:17 | azv | Target Version | 7.7.0 => 7.6.2 |
2022-03-27 10:46 | smoskvin | Status | reviewed => tested |
2022-03-27 10:46 | smoskvin | Note Added: 0107437 | |
2022-03-27 10:50 | smoskvin | Test case number | => bugs/modalg_7/bug32874 |
2022-03-27 12:32 | smoskvin | Changeset attached | => occt master 9b337ad8 |
2022-03-27 12:32 | azv | Assigned To | bugmaster => azv |
2022-03-27 12:32 | azv | Status | tested => verified |
2022-03-27 12:32 | azv | Resolution | open => fixed |
2022-04-02 19:34 | git | Note Added: 0107563 | |
2022-04-06 16:23 | Jerome Monaco | Status | verified => feedback |
2022-04-06 16:23 | Jerome Monaco | Resolution | fixed => reopened |
2022-04-06 16:23 | Jerome Monaco | Note Added: 0107663 | |
2022-04-06 16:27 | azv | Note Added: 0107665 | |
2022-04-06 17:06 | Jerome Monaco | Note Added: 0107666 | |
2022-04-06 17:06 | Jerome Monaco | File Added: RESULTS-Extrema_ExtCC-7.5.0.txt | |
2022-04-06 17:06 | Jerome Monaco | File Added: RESULTS-Extrema_ExtCC-7.6.0.txt | |
2022-04-06 17:06 | Jerome Monaco | File Added: Test1-Extrema_ExtCC_7.6.0.cpp | |
2022-04-07 14:28 | git | Note Added: 0107688 | |
2022-04-07 16:21 | azv | Assigned To | azv => ifv |
2022-04-07 16:21 | azv | Status | feedback => resolved |
2022-04-07 16:21 | azv | Note Added: 0107724 | |
2022-04-08 10:55 | ifv | Assigned To | ifv => bugmaster |
2022-04-08 10:55 | ifv | Status | resolved => reviewed |
2022-04-08 10:55 | ifv | Note Added: 0107745 | |
2022-04-09 09:50 | smoskvin | Status | reviewed => tested |
2022-04-09 09:50 | smoskvin | Note Added: 0107793 | |
2022-04-10 10:42 | smoskvin | Changeset attached | => occt master ee6581ad |
2022-04-10 10:42 | azv | Assigned To | bugmaster => azv |
2022-04-10 10:42 | azv | Status | tested => verified |
2022-04-10 10:42 | azv | Resolution | reopened => fixed |
2022-04-10 10:49 | git | Note Added: 0107823 | |
2022-04-12 09:39 | Jerome Monaco | Note Added: 0107878 |