0032874: IsParallel() method of Extrema_ExtCC does not give same results in OCC 7.6.0 vs OCC 7.5.0

Improve tolerance criteria to check values of extremas for equality: use multiplier, which depends on the value, instead of magic number